[gd_scene load_steps=12 format=3 uid="uid://cvvkgvphe77rk"]

[ext_resource type="Texture2D" uid="uid://blhjjy4jeqi2b" path="res://assest/Game_pong_sprites_V01.svg" id="1_skhqi"]
[ext_resource type="Script" path="res://scenes/game.gd" id="2_pnn1n"]
[ext_resource type="Script" path="res://scripts/Player.gd" id="3_30che"]
[ext_resource type="Script" path="res://scripts/Ball.gd" id="4_gttwi"]
[ext_resource type="Script" path="res://scripts/AI.gd" id="4_jol3u"]
[ext_resource type="PackedScene" uid="uid://dtyrcn0ywbb03" path="res://scenes/pause_menu.tscn" id="6_fnq24"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ec23l"]
size = Vector2(40, 160)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xukbb"]
size = Vector2(30, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_itl6j"]
size = Vector2(1920, 76.6667)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8v11x"]
size = Vector2(1920, 73.3334)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_il44m"]
size = Vector2(80, 1080)

[node name="Background" type="Sprite2D"]
texture_filter = 1
scale = Vector2(0.6, 0.6)
texture = ExtResource("1_skhqi")
centered = false
script = ExtResource("2_pnn1n")

[node name="Player" type="StaticBody2D" parent="."]
position = Vector2(60, 540)
script = ExtResource("3_30che")
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Player"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -80.0
offset_right = 20.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(1.43051e-06, 0)
shape = SubResource("RectangleShape2D_ec23l")

[node name="AI" type="StaticBody2D" parent="."]
position = Vector2(1860, 540)
script = ExtResource("4_jol3u")
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="AI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -80.0
offset_right = 20.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="AI"]
position = Vector2(1.43051e-06, 0)
shape = SubResource("RectangleShape2D_ec23l")

[node name="Ball" type="CharacterBody2D" parent="."]
position = Vector2(960, 540)
collision_mask = 3
script = ExtResource("4_gttwi")
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Ball"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
position = Vector2(-6.10352e-05, 0)
shape = SubResource("RectangleShape2D_xukbb")

[node name="Borders" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="Top" type="CollisionShape2D" parent="Borders"]
position = Vector2(960, -38.3333)
shape = SubResource("RectangleShape2D_itl6j")

[node name="Bottom" type="CollisionShape2D" parent="Borders"]
position = Vector2(960, 1116.67)
shape = SubResource("RectangleShape2D_8v11x")

[node name="ScoreLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreLeft"]
position = Vector2(-40, 540)
shape = SubResource("RectangleShape2D_il44m")

[node name="ScoreRight" type="Area2D" parent="."]
position = Vector2(2000, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreRight"]
position = Vector2(-40, 540)
shape = SubResource("RectangleShape2D_il44m")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="PlayerScore" type="Label" parent="HUD"]
texture_filter = 1
offset_left = 509.0
offset_right = 546.0
offset_bottom = 88.0
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="AIScore" type="Label" parent="HUD"]
texture_filter = 1
offset_left = 607.0
offset_right = 644.0
offset_bottom = 88.0
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="BallTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="PauseMenu" parent="." instance=ExtResource("6_fnq24")]
visible = false

[connection signal="body_entered" from="ScoreLeft" to="." method="_on_score_left_body_entered"]
[connection signal="body_entered" from="ScoreRight" to="." method="_on_score_right_body_entered"]
[connection signal="timeout" from="BallTimer" to="." method="_on_ball_timer_timeout"]
